--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\USER\AppData\Local\Temp\testng-eclipse--78124154\testng-customsuite.xml</span>
+                    <span>testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content failed suite-Default_suite">
                       <span>
                         <img src="failed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="runner.CucumberTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;01 Flow Buy Product&quot;, &quot;Optional[01 Flow Buy Product]&quot;)">runScenario("01 Flow Buy Product", "Optional[01 Flow Buy Product]")</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="runner.CucumberTestRunner" class="method navigator-link" hash-for-method="runScenario(&quot;Test login web facebook&quot;, &quot;Optional[Test]&quot;)">runScenario("Test login web facebook", "Optional[Test]")</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content failed suite-Default_suite -->
@@ -127,16 +127,31 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="runScenario(&quot;01 Flow Buy Product&quot;, &quot;Optional[01 Flow Buy Product]&quot;)">
-                  </a> <!-- runScenario("01 Flow Buy Product", "Optional[01 Flow Buy Product]") -->
+                  <a name="runScenario(&quot;Test login web facebook&quot;, &quot;Optional[Test]&quot;)">
+                  </a> <!-- runScenario("Test login web facebook", "Optional[Test]") -->
                   <span class="method-name">runScenario</span>
-                  <span class="parameters">("01 Flow Buy Product", "Optional[01 Flow Buy Product]")</span>
-                  <div class="stack-trace">java.lang.AssertionError: Chờ lấy hàng # Đang lấy hàng
-	at org.testng.Assert.fail(Assert.java:99)
-	at utilities.CommonFunctions.verifyDataEquals(CommonFunctions.java:456)
-	at actions.Internal_WMSActions.verifyStatusChange(Internal_WMSActions.java:773)
-	at stepdefinitions.Internal_WMSPageSteps.i_should_see_status_change_on_the_internal_detail_ticket_wms_page(Internal_WMSPageSteps.java:133)
-	at ✽.I should see status change &quot;Đang lấy hàng&quot; on the Internal Detail Ticket WMS page(file:///D:/buymed-automation-project-thang/src/test/resources/features/regression/01_FlowBuyProduct.feature:77)
+                  <span class="parameters">("Test login web facebook", "Optional[Test]")</span>
+                  <div class="stack-trace">org.openqa.selenium.SessionNotCreatedException: Could not start a new session. Response code 500. Message: session not created: This version of ChromeDriver only supports Chrome version 114
+Current browser version is 126.0.6478.127 with binary path /Applications/Google Chrome.app/Contents/MacOS/Google Chrome
+Build info: version: &apos;4.0.0&apos;, revision: &apos;3a21814679&apos;
+System info: host: &apos;Thangs-MBP&apos;, ip: &apos;2001:ee0:2c9:950c:2bf:8f17:6dc0:3%en0&apos;, os.name: &apos;Mac OS X&apos;, os.arch: &apos;x86_64&apos;, os.version: &apos;14.4.1&apos;, java.version: &apos;17.0.3&apos;
+Driver info: org.openqa.selenium.chrome.ChromeDriver
+Command: [null, newSession {capabilities=[Capabilities {browserName: chrome, goog:chromeOptions: {args: [--start-maximized, --disable-web-security, --no-proxy-server, test-type, disable-popup-blocking, --use-fake-ui-for-media-stream, --disable-notifications, --remote-debugging-port=9222, --remote-allow-origins=*], excludeSwitches: [enable-automation], extensions: [], prefs: {credentials_enable_service: false, profile.password_manager_enabled: false}, useAutomationExtension: false}, goog:loggingPrefs: org.openqa.selenium.logging...}], desiredCapabilities=Capabilities {acceptSslCerts: true, browserName: chrome, goog:chromeOptions: {args: [--start-maximized, --disable-web-security, --no-proxy-server, test-type, disable-popup-blocking, --use-fake-ui-for-media-stream, --disable-notifications, --remote-debugging-port=9222, --remote-allow-origins=*], excludeSwitches: [enable-automation], extensions: [], prefs: {credentials_enable_service: false, profile.password_manager_enabled: false}, useAutomationExtension: false}, loggingPrefs: org.openqa.selenium.logging...}}]
+	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:126)
+	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:84)
+	at org.openqa.selenium.remote.ProtocolHandshake.createSession(ProtocolHandshake.java:62)
+	at org.openqa.selenium.remote.HttpCommandExecutor.execute(HttpCommandExecutor.java:156)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.invokeExecute(DriverCommandExecutor.java:164)
+	at org.openqa.selenium.remote.service.DriverCommandExecutor.execute(DriverCommandExecutor.java:139)
+	at org.openqa.selenium.remote.RemoteWebDriver.execute(RemoteWebDriver.java:559)
+	at org.openqa.selenium.remote.RemoteWebDriver.startSession(RemoteWebDriver.java:246)
+	at org.openqa.selenium.remote.RemoteWebDriver.&lt;init&gt;(RemoteWebDriver.java:168)
+	at org.openqa.selenium.chromium.ChromiumDriver.&lt;init&gt;(ChromiumDriver.java:108)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:104)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:91)
+	at org.openqa.selenium.chrome.ChromeDriver.&lt;init&gt;(ChromeDriver.java:80)
+	at base.TestBase.setUpDriver(TestBase.java:152)
+	at base.TestBase.setUp(TestBase.java:42)
 
 </div> <!-- stack-trace -->
                   <em>
@@ -148,7 +163,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\USER\AppData\Local\Temp\testng-eclipse--78124154\testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/c8/s8mqtxl53_3_dmkq1qdnbpzw0000gn/T/testng-eclipse--752287462/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -209,12 +224,12 @@ data.addRows(1);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'runScenario')
 data.setCell(0, 2, 'runner.CucumberTestRunner')
-data.setCell(0, 3, 299897);
+data.setCell(0, 3, 7903);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 minutes</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -242,18 +257,18 @@ return data;
             <div class="chronological-class">
               <div class="chronological-class-name">runner.CucumberTestRunner</div> <!-- chronological-class-name -->
               <div class="configuration-class before">
-                <span class="method-name">setUpClass(org.testng.TestRunner@298cfe89)</span>
+                <span class="method-name">setUpClass(org.testng.TestRunner@7a65c995)</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-class before -->
               <div class="test-method">
                 <img src="failed.png">
                 </img>
-                <span class="method-name">runScenario("01 Flow Buy Product", "Optional[01 Flow Buy Product]")</span>
-                <span class="method-start">316 ms</span>
+                <span class="method-name">runScenario("Test login web facebook", "Optional[Test]")</span>
+                <span class="method-start">409 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-class after">
                 <span class="method-name">tearDownClass</span>
-                <span class="method-start">300216 ms</span>
+                <span class="method-start">8319 ms</span>
               </div> <!-- configuration-class after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
